--- a/homepage/package.json
+++ b/homepage/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.11.2",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
